# eyerate

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USER_GUIDE.md  applug.json  eyerate_menu.json  eyerate_menus.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: check-compiled-assets.yml  release.yml  test.yml
.husky/: pre-commit
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  data-providers.md  locale.md  menu-loading.md  release-pipeline.md  testing.md  typescript.md
docs/release-notes/: v0.0.4-rc.1.md  v0.0.4.md
scripts/: README.md  milestone_tasks.yaml  release.py  run-tests.sh  start_milestone.py  sync_version.py
src/eyerate/: admin_securities.ts  endpoints.py  eyerate_functional_tests.json  eyerate_functional_tests.py  eyerate_screens.json  lookup_dialog.ts  plugin.py  routes.py
src/eyerate/error/: __init__.py  error-codes.yaml  error_codes.py  errors.py  manomatika_error.py
src/eyerate/locales/: en.json  es.json
src/eyerate/metadata/: securities_maint_activity_metadata.json
src/eyerate/templates/: admin_securities.html  (+1 more)
tests/: README.md  conftest.py  test_error_codes.py  test_eyerate_functional_tests.py  test_eyerate_screens_data.py  test_i18n_completeness.py  test_menus.py  test_symbol_uniqueness.py
tests/integration/: conftest.py  test_admin.py  test_menus.py  test_securities.py  test_securities_field_contract.py  test_securities_scraper.py  test_symbol_uniqueness.py
tests/scripts/: test_static_assets.py  test_sync_version.py
tests/unit/: conftest.py  test_sync_version.py
(+5 files in other folders)
