[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eyerate"
dynamic = ["version"]
description = "Financial security tracking AppLug for Matika."
readme = "README.md"
requires-python = ">=3.14"
# Runtime deps are eyerate-specific; matika's own deps (fastapi, sqlalchemy,
# httpx, etc.) are provided by the matika host and are NOT listed here.
dependencies = [
    "yfinance>=1.3.0",
    "curl_cffi>=0.15.0",
]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^\n]+)"

[tool.hatch.build.targets.wheel]
packages = ["src/eyerate"]

[dependency-groups]
dev = [
    "httpx2>=2.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
